# shield-core

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  railway.toml
config/: default.yaml
docs/: examples.md
scripts/: test_guardrails.sh  test_llm_guard.sh
src/: config.rs  error.rs  logging.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  types.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs
src/domain/: action.rs  attack.rs  company.rs  evaluation.rs  hitl.rs  metrics.rs  mod.rs  settings.rs  user.rs
src/engine/: alignment.rs  coordinator.rs  firewall.rs  llm_guard.rs  mod.rs  policy.rs
src/storage/: mod.rs  models.rs  repository.rs
